force-app/main/default/objects/SLA_Settings__mdt/SLA_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This metadata type will have information about SLA Process variables based on Support Level.</description>
    <label>SLA Settings</label>
    <pluralLabel>SLA Settings</pluralLabel>
</CustomObject>