force-app/main/default/objects/SLA_Settings__mdt/fields/Entitlement_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Process_Name__c</fullName>
    <label>Entitlement Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>