force-app/main/default/objects/SLA_Settings__mdt/fields/SLA_By_Product_Line_Label__c.field-meta.xml
<CustomField>
    <fullName>SLA_By_Product_Line_Label__c</fullName>
    <defaultValue>&apos;All with same Product Line&apos;</defaultValue>
    <label>SLA By Product Line Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>