force-app/main/default/objects/SLA_Settings__mdt/fields/SLA_By_SN_Label__c.field-meta.xml
<CustomField>
    <fullName>SLA_By_SN_Label__c</fullName>
    <defaultValue>&apos;All with same Serial Number&apos;</defaultValue>
    <label>SLA By SN Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>